--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -16,7 +16,7 @@ html(lang="en")
             .row
                 nav.col-2
                     a.blue(href="/")
-                        i.fas.fa-dove
+                        i.fab.fa-meetup
                     a(href="/")
                         i.fas.fa-home
                     a(href="/search")
