--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,21 +1,29 @@
 body {
-	background-color: #0099ff;
+	width: 100%;
+	height: 100%;
+	background-image: url('https://previews.123rf.com/images/fotographic1980/fotographic19801803/fotographic1980180300001/97523640-internet-firewall-technology-background-abstract-vector-illustration.jpg'); /* The image used */
+	background-color: #cccccc; /* Used if the image is unavailable */
+	height: 500px; /* You must set a specified height */
+	background-position: center; /* Center the image */
+	background-repeat: no-repeat; /* Do not repeat the image */
+	background-size: cover; /* Resize the background image to cover the entire container */
 }
 
 .wrapper {
 	display: flex;
 	justify-content: center;
-	margin-top: 20px;
+	margin-top: 40px;
 }
 
 .loginContainer {
 	padding: 20px;
 	width: 80%;
 	max-width: 500px;
-	border: 1px solid #dedede;
-	background-color: #fff;
+	border: 1px solid #7c6ecf;
+	background-color: rgba(81, 126, 116, 0.466);
+	border-radius: 30px;
 	text-align: center;
-	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.719);
 	-webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
 	-moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
 }
@@ -30,15 +38,19 @@ input[type='email'],
 input[type='password'] {
 	margin-bottom: 20px;
 	padding: 5px 10px;
-	border-radius: 2px;
+	border-radius: 10px;
 	border: 1px solid #dedede;
-	background-color: #f2f2f2;
+	background-color: #fff7f7;
+	padding: 5px;
 }
 
 input[type='submit'] {
-	background-color: #0099ff;
+	background-color: #f64fbea1;
 	color: #fff;
 	border: none;
-	border-radius: 2px;
+	border-radius: 10px;
 	margin-bottom: 10px;
+}
+input[type='submit']:hover {
+	background-color: #f64fbedc;
 }
