--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,7 +3,7 @@
 	--blueLight: #9bd1f9;
 	--blueBackground: rgba(212, 237, 255, 0.6);
 	--buttonHoverBg: #d4edff;
-	--lightGrey: rgb(230, 236, 240);
+	--lightGrey: rgba(81, 102, 116, 0.788);
 	--spacing: 15px;
 	--greyText: rgb(101, 119, 134);
 	--greyButtonText: rgba(0, 0, 0, 0.34);
@@ -19,6 +19,13 @@ body {
 	min-height: 100%;
 	background-color: #fff;
 	font-weight: 300;
+
+	background-image: url('https://i.pinimg.com/1200x/79/26/30/792630d0ffeee67dda34f51c6a2546f3.jpg'); /* The image used */
+	background-color: #cccccc; /* Used if the image is unavailable */
+	height: 500px; /* You must set a specified height */
+	background-position: center; /* Center the image */
+	background-repeat: no-repeat; /* Do not repeat the image */
+	background-size: cover; /* Resize the background image to cover the entire container */
 }
 
 ul {
@@ -65,6 +72,7 @@ nav a {
 
 nav a.blue {
 	color: var(--blue);
+	font-size: 60px;
 }
 
 nav a:hover {
@@ -97,8 +105,8 @@ button span {
 
 .mainSectionContainer {
 	padding: 0;
-	border-left: 1px solid var(--lightGrey);
-	border-right: 1px solid var(--lightGrey);
+	border-left: 0.5px solid var(--lightGrey);
+	border-right: 0.5px solid var(--lightGrey);
 	display: flex;
 	flex-direction: column;
 }
@@ -114,6 +122,7 @@ button span {
 
 .titleContainer h1 {
 	flex: 1;
+	text-align: center;
 }
 
 .postFormContainer {
@@ -154,6 +163,7 @@ button span {
 	border: none;
 	resize: none;
 	font-size: 19px;
+	opacity: 0.7;
 }
 
 #submitPostButton {
@@ -265,7 +275,9 @@ button span {
 .post.largeFont .postFooter {
 	font-size: 23px;
 }
-
+.postBody span {
+	color: rgb(5, 5, 5);
+}
 .postContentContainer .header {
 	display: flex;
 }
@@ -461,7 +473,7 @@ button span {
 	width: 100%;
 	padding: 5px 15px 5px 40px;
 	border-radius: 50px;
-	background-color: var(--lightGrey);
+	background-color: rgba(245, 245, 245, 0.664);
 	border: none;
 	color: var(--greyText);
 }
