--- a/public/css/main.css
+++ b/public/css/main.css
@@ -15,14 +15,14 @@
 
 html,
 body {
-	height: 100%;
+	/* height: 100%; */
 	min-height: 100%;
 	background-color: #fff;
 	font-weight: 300;
 
 	background-image: url('https://i.pinimg.com/1200x/79/26/30/792630d0ffeee67dda34f51c6a2546f3.jpg'); /* The image used */
 	background-color: #cccccc; /* Used if the image is unavailable */
-	height: 500px; /* You must set a specified height */
+	height: 100vh; /* You must set a specified height */
 	background-position: center; /* Center the image */
 	background-repeat: no-repeat; /* Do not repeat the image */
 	background-size: cover; /* Resize the background image to cover the entire container */
