--- a/public/css/main.css
+++ b/public/css/main.css
@@ -516,7 +516,7 @@ button span {
 
 #createChatButton:disabled {
 	background-color: var(--lightGrey);
-	color: var(--greyText);
+	color: whitesmoke;
 }
 
 .selectedUser {
