--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,15 +17,14 @@ html,
 body {
 	/* height: 100%; */
 	min-height: 100%;
-	background-color: #fff;
+	background-color: rgba(113, 128, 131, 0.328);
 	font-weight: 300;
+	/* background-color: #d9afd9;
+	background-image: linear-gradient(0deg, #d9afd9 0%, #97d9e1 100%); */
+	background-color: #baebd9a4;
+	background-image: linear-gradient(100deg, #79dfba70 0%, #ee74e27a 100%);
 
-	background-image: url('https://i.pinimg.com/1200x/79/26/30/792630d0ffeee67dda34f51c6a2546f3.jpg'); /* The image used */
-	background-color: #cccccc; /* Used if the image is unavailable */
 	height: 100vh; /* You must set a specified height */
-	background-position: center; /* Center the image */
-	background-repeat: no-repeat; /* Do not repeat the image */
-	background-size: cover; /* Resize the background image to cover the entire container */
 }
 
 ul {
@@ -206,7 +205,9 @@ button span {
 }
 
 .displayName {
-	font-weight: bold;
+	font-weight: 700;
+	font-size: 19px;
+	color: rgb(0, 0, 0);
 }
 
 .postFooter {
@@ -277,6 +278,7 @@ button span {
 }
 .postBody span {
 	color: rgb(5, 5, 5);
+	font-weight: 600;
 }
 .postContentContainer .header {
 	display: flex;
