--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,12 +1,15 @@
 body {
 	width: 100%;
 	height: 100%;
-	background-image: url('https://previews.123rf.com/images/fotographic1980/fotographic19801803/fotographic1980180300001/97523640-internet-firewall-technology-background-abstract-vector-illustration.jpg'); /* The image used */
-	background-color: #cccccc; /* Used if the image is unavailable */
-	height: 500px; /* You must set a specified height */
-	background-position: center; /* Center the image */
-	background-repeat: no-repeat; /* Do not repeat the image */
-	background-size: cover; /* Resize the background image to cover the entire container */
+	background-color: #3eecac;
+	background-image: linear-gradient(100deg, #3eecacd0 0%, #ee74e2c4 100%);
+
+	/*background-image: url('https://previews.123rf.com/images/fotographic1980/fotographic19801803/fotographic1980180300001/97523640-internet-firewall-technology-background-abstract-vector-illustration.jpg'); /* The image used */
+	/* background-color: #cccccc;
+	height: 500px;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover; */
 }
 
 .wrapper {
